--- a/KatiFuse2/KatiJsonToXml/pom.xml
+++ b/KatiFuse2/KatiJsonToXml/pom.xml
@@ -2,22 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>kati</groupId>
-    <artifactId>kati-json</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>json-to-xml</artifactId>
+
     <version>1.0-SNAPSHOT</version>
 
 
     <dependencies>
-
-        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.8.5</version>
+            <groupId>kati</groupId>
+            <artifactId>kati-jaxb-addr1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>kati</groupId>
+            <artifactId>kati-json</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
