Added Xml processing now with camel

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ KatiFuse2/KatiJaxbAddress1/target/
 .idea/
 KatiFuse2/KatiJson/target/
 KatiFuse2/KatiJaxbAddress2/target/
+KatiFuse2/KatiCamelJaxb/target/
+KatiFuse2/KatiJsonToXml/target/
