--- a/KatiFuse2/KatiCamelAddress/pom.xml
+++ b/KatiFuse2/KatiCamelAddress/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>kati</groupId>
-    <artifactId>kati-camel-jaxb</artifactId>
+    <artifactId>KatiCamelAddress</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -18,6 +18,11 @@
         <dependency>
             <groupId>kati</groupId>
             <artifactId>kati-jaxb-addr1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>kati</groupId>
+            <artifactId>kati-jaxb-addr2</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-jaxb -->
@@ -34,5 +39,6 @@
         </dependency>
 
     </dependencies>
+
 
 </project>
